# NDK_study

./: .gitignore
AllInOne/: build.gradle  settings.gradle
AllInOne/LibVideo/: build.gradle
AllInOne/app/: build.gradle
AllInOne/app/src/main/: AndroidManifest.xml
AllInOne/app/src/main/cpp/: allinone.cpp  (+1 more)
AllInOne/gradle/wrapper/: gradle-wrapper.properties
AllInOne/libOpenCV/: build.gradle
AllInOne/libOpenCV/src/main/cpp/: BitmapMatUtils.cpp  BitmapMatUtils.h  CMakeLists.txt  main.cpp
AllInOne/libffmpeg/: build.gradle
CameraDemo/: settings.gradle
CameraDemo/app/: .gitignore  build.gradle
CameraDemo/app/src/main/: AndroidManifest.xml
CameraDemo/gradle/wrapper/: gradle-wrapper.properties
CameraDemo/lib-camera/: build.gradle
Day23_c/: Day23_c.sln  Day23_c.vcxproj  Simple.cpp
GLDemo/app/: build.gradle
GLDemo/app/src/main/: AndroidManifest.xml
GLDemo/gradle/wrapper/: gradle-wrapper.properties
GLStudio-master/: build.gradle
MyApplication/: build.gradle
MyApplication/app/: build.gradle
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
NDK_Day01/: settings.gradle
NDK_Day01/app/: build.gradle
NDK_Day01/app/src/main/: AndroidManifest.xml
NDK_Day01/gradle/wrapper/: gradle-wrapper.properties
NDK_Day05/: settings.gradle
NDK_Day05/app/: build.gradle
NDK_Day05/app/src/main/: AndroidManifest.xml
NDK_Day05/gradle/wrapper/: gradle-wrapper.properties
NDK_Day06/: NDK_Day06.sdf  NDK_Day06.sln
NDK_Day06/NDK_Day06/: NDK_Day06.vcxproj  Simple.cpp
NDK_Day11/: NDK_Day11.sdf  NDK_Day11.sln  text.txt  text1.txt  text2.txt
NDK_Day11/NDK_Day11/: NDK_Day11.vcxproj  NDK_Day11.vcxproj.filters  Simple.cpp
NDK_Day12/: NDK_Day12.sln  NDK_Day12.vcxproj  NDK_Day12.vcxproj.filters  Simple.c  com_example_ndk_day14_Parcel.h  com_jensen_ndk12_NdkSimple.h  com_jensen_ndk12_NdkSimple1.h  jni.h  native-lib.cpp
NDK_Day12_java/: pom.xml
NDK_Day12_java/jni/: com_jensen_ndk12_NdkSimple.h
NDK_Day12_java/src/main/java/: com_jensen_ndk12_NdkSimple1.h
NDK_Day14/: settings.gradle
NDK_Day14/app/: build.gradle
NDK_Day14/app/src/main/: AndroidManifest.xml
NDK_Day14/gradle/wrapper/: gradle-wrapper.properties
NDK_Day15_c/: NDK_Day15_c.sln  NDK_Day15_c.vcxproj  NDK_Day15_c.vcxproj.filters  Simple.c  com_jensen_day15_Simple.h
NDK_Day15_java/: pom.xml
NDK_Day15_java/jni/: com_jensen_day15_Simple.h
NDK_Day18_c/: NDK_Day18_c.sln  NDK_Day18_c.vcxproj  NDK_Day18_c.vcxproj.filters  Simple.c
NDK_Day19_c/: NDK_Day19_c.sln  NDK_Day19_c.vcxproj  NDK_Day19_c.vcxproj.filters  Simple.c  Simple.cpp
NDK_Day20_c/: NDK_Day20_c.sln  NDK_Day20_c.vcxproj  NDK_Day20_c.vcxproj.filters  Simple.cpp  Student.h
NDK_Day21_c/: NDK_Day21_c.sln  NDK_Day21_c.vcxproj  Simple.cpp
NDK_Day22_c/: NDK_Day22_c.sln  NDK_Day22_c.vcxproj  Simple.cpp
NDK_Day24_c/: NDK_Day24_c.sln  NDK_Day24_c.vcxproj  Simple.cpp
NDK_Day25/: settings.gradle
NDK_Day25/app/: build.gradle
NDK_Day25/gradle/wrapper/: gradle-wrapper.properties
NDK_Day25_c/: NDK_Day25_c.sln
NDK_Day25_c/NDK_Day25_c/: NDK_Day25_c.vcxproj  Simple.cpp
NDK_Day26/: settings.gradle
NDK_Day26/app/: build.gradle
NDK_Day26/gradle/wrapper/: gradle-wrapper.properties
NDK_Day26_c/: NDK_Day26_c.sln  NDK_Day26_c.vcxproj  Simple.cpp
NDK_Day27_c/: NDK_Day27_c.sln  NDK_Day27_c.vcxproj  Simple.cpp
NDK_Day28_c/: NDK_Day28_c.sln  NDK_Day28_c.vcxproj  Simple.cpp
NDK_Day29_c/: NDK_Day29_c.sln  NDK_Day29_c.vcxproj  Simple.cpp
NDK_Day30_c/: NDK_Day30_c.sln  NDK_Day30_c.vcxproj  NDK_Day30_c.vcxproj.filters  Simple.cpp
NDK_Day31/: settings.gradle
NDK_Day31/app/: build.gradle
NDK_Day31/app/src/main/cpp/: BitmapMatUtils.cpp  BitmapMatUtils.h  CMakeLists.txt  cardocr.cpp  cardocr.h  native-lib.cpp
NDK_Day31/gradle/wrapper/: gradle-wrapper.properties
NDK_Day32/: NDK_Day32.sln  NDK_Day32.vcxproj
NDK_Day34/: settings.gradle
NDK_Day34/app/: build.gradle
NDK_Day34/gradle/wrapper/: gradle-wrapper.properties
NDK_Day35/: settings.gradle
NDK_Day35/app/: build.gradle
NDK_Day35/gradle/wrapper/: gradle-wrapper.properties
NDK_Day39/: settings.gradle
NDK_Day39/app/: build.gradle
NDK_Day39/gradle/wrapper/: gradle-wrapper.properties
NDK_Day56/: NDK_Day56.sln  NDK_Day56.vcxproj  Simple.cpp  black_spot.jfif
NDK_Day_07/: NDK_Day_07.sdf  NDK_Day_07.sln
NDK_Day_07/NDK_Day_07/: NDK_Day_07.vcxproj  Simple.cpp
NDK_Day_08/: NDK_Day_08.sln
NDK_Day_08/NDK_Day_08/: NDK_Day_08.vcxproj  Simple.cpp
NDK_Day_09/: NDK_Day_09.sdf  NDK_Day_09.sln
NDK_Day_09/NDK_Day_09/: NDK_Day_09.vcxproj  simple.cpp
NDK_Day_10/: NDK_Day_10.sdf  NDK_Day_10.sln
NDK_Day_10/NDK_Day_10/: NDK_Day_10.vcxproj  simple.cpp
(+159 files in other folders)
